--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "eslint:ci": "eslint .",
     "prettier": "prettier --write \"**/*.{json,yml,yaml,md}\"",
     "prettier:ci": "prettier --check \"**/*.{json,yml,yaml,md}\"",
-    "format": "npm run prettier && npm run lint"
+    "format": "npm run prettier && npm run lint",
+    "test": "node node_modules/jest/bin/jest.js --watchAll",
+    "test:ci": "node node_modules/jest/bin/jest.js --ci --collectCoverage"
   },
   "repository": {
     "type": "git",
@@ -28,7 +30,6 @@
     "@fastify/etag": "5.1.0",
     "@fastify/static": "6.12.0",
     "fastify": "^4.25.1",
-    "fs-extra": "^11.2.0",
     "lodash": "^4.17.21",
     "pino-pretty": "^10.3.0",
     "uuid": "^9.0.1"
@@ -36,7 +37,7 @@
   "devDependencies": {
     "@sap/open-resource-discovery": "./deps/open-resource-discovery",
     "@tsconfig/node20": "20.1.2",
-    "@types/fs-extra": "^11.0.4",
+    "@types/jest": "^29.5.14",
     "@types/json-schema": "^7.0.15",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.4",
@@ -49,9 +50,11 @@
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.0.1",
+    "jest": "^29.7.0",
     "openapi-types": "^12.1.3",
     "prettier": "3.1.1",
     "rimraf": "^5.0.5",
+    "ts-jest": "^29.2.5",
     "tsx": "4.6.2",
     "typescript": "~5.3.3"
   }
