--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "build": "rimraf dist && tsc",
-    "start": "ls -la . && ls -la ./deps && ls -la ./node_modules && ls -la ./dist && node ./dist/src/server.js",
+    "dir": "ls -la . && ls -la ./deps && ls -la ./node_modules && ls -la ./dist",
+    "start": "node ./dist/src/server.js",
     "dev": "tsx watch ./src/server.ts",
     "eslint": "eslint . --fix",
     "eslint:ci": "eslint .",
@@ -26,36 +27,31 @@
   },
   "author": "SAP SE",
   "dependencies": {
-    "@fastify/basic-auth": "5.1.1",
-    "@fastify/etag": "5.1.0",
-    "@fastify/static": "6.12.0",
-    "fastify": "^4.25.1",
+    "@fastify/basic-auth": "6.0.3",
+    "@fastify/etag": "6.0.3",
+    "@fastify/static": "8.0.4",
+    "fastify": "^5.2.1",
     "lodash": "^4.17.21",
-    "pino-pretty": "^10.3.0",
-    "uuid": "^9.0.1"
+    "pino-pretty": "^13.0.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
-    "@sap/open-resource-discovery": "./deps/open-resource-discovery",
-    "@tsconfig/node20": "20.1.2",
+    "@sap/open-resource-discovery": "@sap/open-resource-discovery",
+    "@sap/eslint-config": "0.3.2",
+    "@tsconfig/node20": "20.1.4",
     "@types/jest": "^29.5.14",
     "@types/json-schema": "^7.0.15",
-    "@types/lodash": "^4.14.202",
-    "@types/node": "^20.10.4",
-    "@types/pino": "^7.0.4",
-    "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.0.1",
+    "@types/lodash": "^4.17.14",
+    "@types/node": "^22.10.5",
+    "@types/pino": "^7.0.5",
+    "@types/uuid": "^10.0.0",
+    "eslint": "^9.18.0",
     "jest": "^29.7.0",
     "openapi-types": "^12.1.3",
-    "prettier": "3.1.1",
-    "rimraf": "^5.0.5",
+    "prettier": "3.4.2",
+    "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
-    "tsx": "4.6.2",
-    "typescript": "~5.3.3"
+    "tsx": "4.19.2",
+    "typescript": "~5.7.3"
   }
 }
