--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sap/open-resource-discovery-reference-application",
+  "name": "@open-resource-discovery/specification-reference-application",
   "version": "1.1.0",
   "description": "This is a reference application for the Open Resource Discovery protocol",
   "type": "module",
@@ -35,7 +35,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@sap/open-resource-discovery": "./deps/open-resource-discovery",
+    "@open-resource-discovery/specification": "^1.12.0",
     "@tsconfig/node20": "20.1.6",
     "@types/jest": "^30.0.0",
     "@types/json-schema": "^7.0.15",
@@ -50,7 +50,7 @@
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.1",
-    "jest": "^30.0.3",
+    "jest": "^30.0.4",
     "openapi-types": "^12.1.3",
     "prettier": "3.6.2",
     "rimraf": "^6.0.1",
