--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build": "rimraf dist && tsc",
     "start": "node ./dist/src/server.js",
     "dev": "tsx watch ./src/server.ts",
-    "eslint": "eslint . --fix",
-    "eslint:ci": "eslint .",
+    "lint": "eslint . --fix",
+    "lint:ci": "eslint .",
     "prettier": "prettier --write \"**/*.{json,yml,yaml,md}\"",
     "prettier:ci": "prettier --check \"**/*.{json,yml,yaml,md}\"",
     "format": "npm run prettier && npm run lint",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@open-resource-discovery/specification": "^1.12.0",
+    "@sap/eslint-config": "^0.4.0",
     "@tsconfig/node20": "20.1.6",
     "@types/jest": "^30.0.0",
     "@types/json-schema": "^7.0.15",
