Skipping integration tests that fail because CRM basic auth handler causes problems
Signed-off-by: Simon Heimler <simon.heimler@sap.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "paths": {
       "src/*": ["src/*"]
     },
-    "types": ["node"]
+    "types": ["node"],
+    "isolatedModules": true
   },
   "include": ["./src/**/*"],
   "exclude": ["node_modules", "dist", "deps"]
