--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@sap/open-resource-discovery-reference-application",
-  "version": "1.0.0",
+  "name": "@open-resource-discovery/specification-reference-application",
+  "version": "1.1.0",
   "description": "This is a reference application for the Open Resource Discovery protocol",
   "type": "module",
   "private": true,
@@ -10,10 +10,10 @@
   },
   "scripts": {
     "build": "rimraf dist && tsc",
-    "start": "ls -la . && ls -la ./deps && ls -la ./node_modules && ls -la ./dist && node ./dist/src/server.js",
+    "start": "node ./dist/src/server.js",
     "dev": "tsx watch ./src/server.ts",
-    "eslint": "eslint . --fix",
-    "eslint:ci": "eslint .",
+    "lint": "eslint . --fix",
+    "lint:ci": "eslint .",
     "prettier": "prettier --write \"**/*.{json,yml,yaml,md}\"",
     "prettier:ci": "prettier --check \"**/*.{json,yml,yaml,md}\"",
     "format": "npm run prettier && npm run lint",
@@ -26,36 +26,31 @@
   },
   "author": "SAP SE",
   "dependencies": {
-    "@fastify/basic-auth": "5.1.1",
-    "@fastify/etag": "5.1.0",
-    "@fastify/static": "6.12.0",
-    "fastify": "^4.25.1",
+    "@fastify/basic-auth": "6.2.0",
+    "@fastify/etag": "6.0.3",
+    "@fastify/static": "8.2.0",
+    "fastify": "^5.4.0",
     "lodash": "^4.17.21",
-    "pino-pretty": "^10.3.0",
-    "uuid": "^9.0.1"
+    "pino-pretty": "^13.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@sap/open-resource-discovery": "./deps/open-resource-discovery",
-    "@tsconfig/node20": "20.1.2",
-    "@types/jest": "^29.5.14",
+    "@open-resource-discovery/specification": "^1.12.0",
+    "@sap/eslint-config": "^0.4.0",
+    "@tsconfig/node20": "20.1.6",
+    "@types/jest": "^30.0.0",
     "@types/json-schema": "^7.0.15",
-    "@types/lodash": "^4.14.202",
-    "@types/node": "^20.10.4",
-    "@types/pino": "^7.0.4",
-    "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.0.1",
-    "jest": "^29.7.0",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^24.0.10",
+    "@types/pino": "^7.0.5",
+    "@types/uuid": "^10.0.0",
+    "eslint": "^9.30.1",
+    "jest": "^30.0.4",
     "openapi-types": "^12.1.3",
-    "prettier": "3.1.1",
-    "rimraf": "^5.0.5",
-    "ts-jest": "^29.2.5",
-    "tsx": "4.6.2",
-    "typescript": "~5.3.3"
+    "prettier": "3.6.2",
+    "rimraf": "^6.0.1",
+    "ts-jest": "^29.4.0",
+    "tsx": "4.20.3",
+    "typescript": "~5.8.3"
   }
 }
