--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "engines": {
     "node": "^22",
-    "npm": "^9"
+    "npm": ">=9"
   },
   "scripts": {
     "build": "rimraf dist && tsc",
