--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: app-build
+          name: app
           path: |
             dist
             /package*.json
@@ -58,7 +58,7 @@ jobs:
       - name: Download pre-built app artifact
         uses: actions/download-artifact@v4
         with:
-          name: app-build
+          name: app
 
       # - uses: actions/setup-node@v4
       #   with:
